--- a/05_current/android/app/build.gradle
+++ b/05_current/android/app/build.gradle
@@ -58,8 +58,10 @@ dependencies {
     def room_version = "2.2.6"
     def firebase_version = "26.8.0"
     def okhttp_version = "4.9.1"
+    def glide_version = "4.11.0"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
