--- a/15_services/android/app/build.gradle
+++ b/15_services/android/app/build.gradle
@@ -1,7 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
+kapt {
+    correctErrorTypes true
+}
 
 android {
     compileSdkVersion 30
@@ -44,6 +48,8 @@ android {
     }
 }
 
+
+
 dependencies {
     def core_version = "1.3.2"
     def appcompat_version = "1.2.0"
@@ -67,6 +73,14 @@ dependencies {
     def coroutines_version = "1.4.3"
     def imagepicker_version = "1.8"
     def workmanager_version = "2.5.0"
+    def work_version = "2.5.0"
+
+    implementation("com.google.dagger:hilt-android:$hilt_version")
+    kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
+    implementation("androidx.work:work-runtime-ktx:$work_version")
+    implementation 'androidx.hilt:hilt-work:1.0.0'
+    kapt("androidx.hilt:hilt-compiler:1.0.0")
+
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
