--- a/15_services/android/app/src/main/AndroidManifest.xml
+++ b/15_services/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.netology.nmedia">
+    package="ru.netology.nmedia"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,6 +15,12 @@
         android:theme="@style/AppTheme"
         android:name=".application.NMediaApplication"
         android:usesCleartextTraffic="${usesCleartextTraffic}">
+
+        <provider
+            android:name="androidx.work.impl.WorkManagerInitializer"
+            android:authorities="${applicationId}.workmanager-init"
+            tools:node="remove" />
+
         <activity android:name=".activity.AppActivity">
             <nav-graph android:value="@navigation/nav_main" />
 
